--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.6",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
-    "@angular/platform-browser": "~9.0.6",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "rxjs": "~6.5.4",
