fixing the path

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href=/PrayerTimeAPI/",
+    "deploy": "ng build --prod --base-href=/PrayerTimeAPI/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
